src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AcademicStanding__c</fullName>
        <description>This is calculated by a store procedure in banner and is used to determine the icon and the color of data for the MyStudents in a view page.</description>
        <inlineHelpText>Academic Standing not the same as Fin Aid Standing</inlineHelpText>
        <label>Academic Standing</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcceptsTexting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if this prospect accepts mobile texting (we can send text messages to their mobile phone).</description>
        <label>Accepts Texting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalContactInfo__c</fullName>
        <description>Any contact information outside name, address, phone and email can go here as just a text field.  This is not a reportable field</description>
        <inlineHelpText>Any contact information outside name, address, phone and email can go here as just a text field.  This is not a reportable field</inlineHelpText>
        <label>Additional Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Urgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BadContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to identify a contact that needs to be reviewed for possible merging or deletion.</description>
        <inlineHelpText>Please check this box only once you have verified that the contact is either a duplicate or should be deleted.</inlineHelpText>
        <label>Bad Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BalanceDue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This just shows if a balance is due from the student.</description>
        <inlineHelpText>Student has a balance due.</inlineHelpText>
        <label>Balance Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerReady__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to be updated from a Opportunity/CAREProfile when the correct status has been reached to begin updating Banner from Contact. Should be automated and never set by hand.</description>
        <label>Banner Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerStatus__c</fullName>
        <description>Student status as reported by SunGard Banner SIS, e.g., AS</description>
        <label>Banner Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <description>Formula field that converts the Birthdate field to a text field displaying only the month and day.</description>
        <formula>CASE(MONTH(Birthdate), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
LPAD(TEXT(DAY(Birthdate)),2,&apos;0&apos;)</formula>
        <label>Birthday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CABASPNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA BASP Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMSSPNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA MSSP Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAREStage__c</fullName>
        <label>CARE Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dis-Positioned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSContentSupervised__c</fullName>
        <description>Areas clinical supervisors have supervised adult students.</description>
        <label>CS Content Supervised</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSDegree1Content__c</fullName>
        <description>Content of the clinical supervisor&apos;s first degree</description>
        <label>CS Degree 1 Content</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C and I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science-General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSDegree1__c</fullName>
        <description>First degree for clinical supervisor</description>
        <label>CS Degree 1</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSDegree2Content__c</fullName>
        <description>Content of the clinical supervisor&apos;s second degree</description>
        <label>CS Degree 2 Content</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C and I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science-General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSDegree2__c</fullName>
        <description>Second degree for clinical supervisor</description>
        <label>CS Degree 2</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSDegree3Content__c</fullName>
        <description>Content of the clinical supervisor&apos;s third degree</description>
        <label>CS Degree 3 Content</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C and I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science-General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSDegree3__c</fullName>
        <description>Third degree for clinical supervisor</description>
        <label>CS Degree 3</label>
        <picklist>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EdD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSEmailToggle__c</fullName>
        <label>CSEmailToggle</label>
        <picklist>
            <picklistValues>
                <fullName>Toggle1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toggle2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSStanding__c</fullName>
        <description>Standing of the clinical supervisor</description>
        <label>CS Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DON&apos;T USE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking: High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking: Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking: Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSStatusNotes__c</fullName>
        <label>CS Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSStatus__c</fullName>
        <label>CS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking: High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking: Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranking: Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reapplied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSSupervisionType__c</fullName>
        <description>Picklist to identify and search for clinical supervisors that supervise in a certain area.</description>
        <label>CS Supervision Type</label>
        <picklist>
            <picklistValues>
                <fullName>DT - Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT - Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSSP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CSYearsSupervising__c</fullName>
        <description>The number of years a clinical supervisor has supervised student teachers.</description>
        <label>CS Years Supervising</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSYearsTeaching__c</fullName>
        <label>CS Years Teaching</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>under 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CampusCodeMismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Campus Code is for a State that is not the same as the State the Contact resides in. 

False if the Campus Code and the State of residence match.</description>
        <inlineHelpText>True if the Campus Code is for a State that is not the same as the State the Contact resides in. 

False if the Campus Code and the State of residence match.</inlineHelpText>
        <label>Campus Code/Address Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampusCode__c</fullName>
        <description>This is the state campus code if there is one, otherwise it is considered the Main campus.</description>
        <inlineHelpText>Campus Code for WGU State Universities</inlineHelpText>
        <label>Campus Code</label>
        <picklist>
            <picklistValues>
                <fullName>WGU Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Washington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Tennessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Texas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CatalogYear__c</fullName>
        <label>Catalog Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearedTerm__c</fullName>
        <label>Cleared Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleared_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the student has been cleared for getting a mentor assignment from admissions</description>
        <inlineHelpText>If checked, this student can be assigned a mentor.</inlineHelpText>
        <label>Cleared Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComposeEmailLink__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p2_lkid=&quot;&amp;Id&amp;&quot;&amp;rtype=003&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a000000233aP&amp;oid=00Df0000002MhY1&amp;lastMod=1364401613000&quot;,&quot;Send Email&quot;),&quot;_blank&quot; )</formula>
        <label>Send Quick Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTypeFE__c</fullName>
        <description>Type of contact, used for Field Experiences</description>
        <label>Contact Type (FE)</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preceptor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Site Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CountOfIncidents__c</fullName>
        <description>Field Experiences number of incidents</description>
        <label>Count Of Incidents</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumulativeSAP__c</fullName>
        <description>Cumulative SAP Percentage
Includes courses that received TR or RS</description>
        <formula>if(TotalAttemptedCUs__c &gt;0, TotalCompletedCUs__c / TotalAttemptedCUs__c , 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cumulative SAP Percentage
Includes courses that received TR or RS</inlineHelpText>
        <label>Cumulative SAP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentTermCompletedCUs__c</fullName>
        <label>Current Term Completed CUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentTermEnrolledCUs__c</fullName>
        <label>Current Term Enrolled CUs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentTerm__c</fullName>
        <description>Current Term for the student, this is wgu foramtted</description>
        <label>Current Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsMentor__c</fullName>
        <formula>IF($User.PIDM__c = Mentor__r.PIDM__c,&apos;True&apos;,&apos;False&apos;)</formula>
        <label>Current User Is Mentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <description>Self disclosed from the application form</description>
        <label>Date of Birth</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the student is deceased, then true</description>
        <inlineHelpText>True or Checked of the student is deceased.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>District with which the contact is associated</description>
        <label>District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>District Contacts</relationshipLabel>
        <relationshipName>DistrictContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DoNotCallUntil__c</fullName>
        <description>Field Experiences indicator for date at which contact may be called</description>
        <label>Do Not Call Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailVerifiedFE__c</fullName>
        <description>Email address has been verified by Field Placement on this date.</description>
        <inlineHelpText>Date FE verified the email is correct.</inlineHelpText>
        <label>Email Verified FE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndorsementNotification2Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endorsement Notification 2 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndorsementNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endorsement Notification 1 Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnrollmentCouncilor__c</fullName>
        <description>A simple string field that displays the enrollment councilor</description>
        <label>Enrollment Councilor</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>White/Non-Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian or Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Indian or Alaskan Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two or More Races</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EulaAgreementDate__c</fullName>
        <description>The date and time which the student agreed to the EULA. This is done via FDP.</description>
        <label>EULA Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExcludeFromEloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this contact record from synchronizing with the Eloqua email distribution</description>
        <label>Exclude From Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAADateAge__c</fullName>
        <formula>TODAY()- FAADate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAA Date Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAADate__c</fullName>
        <label>FAA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDPDataCleanupTemp__c</fullName>
        <formula>IF(
  OR(
    ProgramCode__c != WGUDegreeProgram__r.Name,
    ProgramCatalogTerm__c != WGUDegreeProgram__r.CatalogTerm__c
  ),
  &apos;false&apos;,&apos;true&apos;
)</formula>
        <label>FDPDataCleanupTemp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEContactInfoVerifiedDate__c</fullName>
        <description>Field Experience has verified that current contact data is accurate.</description>
        <inlineHelpText>Date contact info was last verified, email, phone, name, status, address, etc.</inlineHelpText>
        <label>FE Contact Info Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FERPAAccess__c</fullName>
        <description>Formula field to bring in an image to display if the student&apos;s has requested FERPA directory information to be blocked.</description>
        <formula>IF 
( 
FERPAIndicator__c = TRUE, 
IMAGE( &quot;/servlet/servlet.ImageServer?id=015a00000023FGW&amp;oid=00Df0000002MhY1&quot;, &quot;Private and Confidential&quot;), 
IMAGE( &quot;/servlet/servlet.ImageServer?id=015a00000023FGb&amp;oid=00Df0000002MhY1 &quot;, &quot;Directory Info&quot;) 
)</formula>
        <inlineHelpText>If Private &amp; Confidential all inquiries must be routed through the Office of the Registrar, Student Records Department</inlineHelpText>
        <label>FERPA Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FERPADesignee__c</fullName>
        <description>Text area used to indicate a person or company to whom the student has granted access to their academic record to.</description>
        <inlineHelpText>Please insert the contact information to the person whom the student has granted access to their academic record to. Be sure to attach the FERPA consent form.</inlineHelpText>
        <label>FERPA Designee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FERPAIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FERPA Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEResume__c</fullName>
        <description>Resumes for Field Experiences business contractors.</description>
        <label>FE Resume</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinancialAidCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>THis is just a quick checkbox that says whether the individual has financial aid.</description>
        <inlineHelpText>Checked if this individual has financial aid.</inlineHelpText>
        <label>Financial Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialAidStatus__c</fullName>
        <label>Financial Aid Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoLoc__c</fullName>
        <description>The geolocation of this contact</description>
        <inlineHelpText>Latitude and Longitude of the contace</inlineHelpText>
        <label>GeoLoc</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
</CustomObject>